Github issue#1217, Project card view — centre align the cards

--- a/src/projects/list/components/Projects/ProjectsGridView.scss
+++ b/src/projects/list/components/Projects/ProjectsGridView.scss
@@ -88,7 +88,7 @@
 .card-view {
   display: flex;
   flex-flow: row wrap;
-  max-width: 1150px;// media query needed for smaller/bigger screens
+  max-width: 1115px;// media query needed for smaller/bigger screens
   margin: 20px auto;
 
   .project-card {
